.k8s/staging/deployment-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-court-data-ui-metrics
  namespace: laa-court-data-ui-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laa-court-data-ui
      service: laa-court-data-ui-metrics-service
  template:
    metadata:
      labels:
        app: laa-court-data-ui
        service: laa-court-data-ui-metrics-service
    spec:
      containers:
        - name: laa-court-data-ui-metrics
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
          ports:
          - containerPort: 9394
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
