.k8s/staging/deployment-worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laa-court-data-ui-worker
  namespace: laa-court-data-ui-dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: laa-court-data-ui
      tier: worker
  template:
    metadata:
      labels:
        app: laa-court-data-ui
        tier: worker
    spec:
      containers:
        - name: laa-court-data-ui-worker
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
          command: ['bundle', 'exec', 'sidekiq']
          readinessProbe:
            exec:
              command: ['bundle', 'exec', 'rake', 'worker:healthcheck']
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ['bundle', 'exec', 'rake', 'worker:healthcheck']
            initialDelaySeconds: 30
            periodSeconds: 30
