.k8s/staging/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: laa-court-data-ui-metrics-service
  namespace: laa-court-data-ui-staging
  labels:
    app: laa-court-data-ui-metrics-service
spec:
  ports:
    - port: 9394
      protocol: TCP
      name: metrics
  selector:
    app: laa-court-data-ui
