.k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laa-court-data-ui-app-ingress
  namespace: laa-court-data-ui-staging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
    external-dns.alpha.kubernetes.io/set-identifier: laa-court-data-ui-app-ingress-laa-court-data-ui-staging-blue
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/server-snippet: |
        deny 223.178.211.9;
        deny 143.244.161.10;
        deny 206.72.194.213;
        deny 209.126.4.156;
spec:
  rules:
    - host: staging.view-court-data.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: laa-court-data-ui-app-service
              servicePort: 80
  tls:
    - hosts:
      - staging.view-court-data.service.justice.gov.uk
      secretName: laa-court-data-ui-staging-cert
